@@ -1,11 +1,12 @@
 (
-	( CONFIG:POPULATION-SIZE 75 )
-	( CONFIG:MAX-STEP-UNCHANGED 10000 )
+	( CONFIG:POPULATION-SIZE 200 )
+	( CONFIG:MAX-STEP-UNCHANGED 100000 )
 	( CONFIG:MAX-OBJECT-DEPTH 16 )
 	( CONFIG:MAX-INDIVIDUAL-ADFS 32 )
 	( CONFIG:MAX-STOP-MOVES 3 )
 	( CONFIG:MAX-EVALATION-LOOPS 20000 )
 	( CONFIG:MAX-INDIVIDUAL-STEPS 12 )
 	( CONFIG:MAX-OPT-LOOPS 512 ) 
+	( CONFIG:MUTATION-RATE-PERCENT 20 )
 )
 
